# algo3-tp1

./: .gitignore  CMakeLists.txt  Graficos.twb  experiments.py  generate.py  output.csv  process.py  tests.py  tp1
docs/: main.tex
docs/images/: treeEvolution.psd
experiments/: test_1.expected  test_1_complejidad.in  test_1_complejidad.sts  test_1_complejidad_best.sts  test_1_complejidad_worst.sts  test_2_complejidad.in  test_2_complejidad.sts  test_2_complejidad_best.sts  test_2_complejidad_random.sts  test_2_complejidad_worst.sts  test_3.expected  test_3.in  test_3_complejidad.in  test_3_complejidad.sts  test_3_complejidad_normal.sts  test_3_complejidad_worst.sts
src/: Camino.cpp  Camino.h  Exploradoras.cpp  Exploradoras.h  Explorers.cpp  Explorers.h  Median.cpp  Median.h  Path.cpp  Path.h  Statistics.cpp  Statistics.h  main.cpp
tests/: Tp1Ej1.in  Tp1Ej1.out  Tp1Ej2.out  Tp1Ej3.out  Tp1Ej3.out.t  ex1.out  ex1.sts  ex11.out  ex2.sts  ex3.in  ex3.out  ex3.sts  test_1_catedra.expected  test_1_correctitud.expected  test_1_correctitud.in  test_2_catedra.in  test_2_correctitud.expected  test_3_correctitud.expected  test_3_correctitud.in  test_runner.py
tests/experiments/: test_2.in
tests/tptests/: Tp1Ej1.in  Tp1Ej1.out
